Se agregan nuevos archivos